loop for break and timer work, need to fix pause

--- a/style.css
+++ b/style.css
@@ -32,6 +32,14 @@ h1{
     cursor: pointer;
 }
 
+.buttonTimer{
+    font-family: 'Press Start 2P';
+    border-radius: 20px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+
 video {
     max-width: 100%;         
     width: 600px;            
